src/snapshots/simplelogin_relay__tests__snapshot_mails-2.snap
---
source: src/main.rs
expression: sorted_mails
---
[
    SnapshotMail {
        email: "From: user@private.com\r\nTo: \"First\" <first_at_example_com@simplelogin.co>\r\nCc: \"Second\" <second_at_example_com@simplelogin.co>\r\nDate: Tue, 15 Jan 2008 16:02:43 -0500\r\nSubject: Test message\r\n\r\nHello\r\n.",
        from: Some(
            Address {
                serialized: "user@private.com",
                at_start: 4,
            },
        ),
        to: [
            "first_at_example_com@simplelogin.co",
            "second_at_example_com@simplelogin.co",
        ],
    },
]
